# Stochastic-Credit-Risk-and-ECL-Engine

./: .gitignore  NEXT_STEPS_GUIDE.md  README.md  config_db.ts  package-lock.json  package.json  pyproject.toml  test-db-connection.ts
database/migrations/: 000_init.sql  003_create_pd_benchmarks.sql  004_create_loans.sql  005_create_ecl_results.sql  006_create_ecl_monthly_projections.sql
scripts/: run-migration.ts
src/: main_naive.py  math_logic.py  simulation.py
src/config/: db.ts
tests/: test-db-connection.ts
